--- a/src/app/styles/base.css
+++ b/src/app/styles/base.css
@@ -31,3 +31,16 @@
   border-bottom: 1px solid black;
   font-weight: bold;
 }
+
+.drop-box {
+  background: #F8F8F8;
+  border: 5px dashed #DDD;
+  width: 200px;
+  height: 65px;
+  text-align: center;
+  padding-top: 25px;
+  margin: 10px;
+}
+.dragover {
+  border: 5px dashed blue;
+}
