--- a/src/app/styles/base.css
+++ b/src/app/styles/base.css
@@ -44,3 +44,103 @@
 .dragover {
   border: 5px dashed blue;
 }
+
+
+/*Prelogin css*/
+/*
+ * Globals
+ */
+
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+
+
+/*
+ * Base structure
+ */
+
+html,
+body.prelogin {
+  height: 100%;
+  background-color: #333;
+}
+body.prelogin {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+body.prelogin .site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+body.prelogin .site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+}
+body.prelogin .cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Padding for spacing */
+body.prelogin .inner {
+  padding: 30px;
+}
+
+
+
+/*
+ * Cover
+ */
+
+body.prelogin .cover {
+  padding: 0 20px;
+}
+body.prelogin .cover .btn-lg {
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+
+/*
+ * Affix and center
+ */
+
+@media (min-width: 768px) {
+  /* Start the vertical centering */
+  body.prelogin .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  body.prelogin .cover-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+
+@media (min-width: 992px) {
+  body.prelogin .cover-container {
+    width: 700px;
+  }
+}
+
+/**/
