--- a/src/app/views/templates/navbar.html
+++ b/src/app/views/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="navbar-header">
-          <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
+          <a class="navbar-brand" href="/#/">
             Logo Here
           </a>
         </div>
