--- a/src/app/views/prelogin/dashboard/landing.html
+++ b/src/app/views/prelogin/dashboard/landing.html
@@ -296,7 +296,7 @@
           <span class="glyphicon glyphicon-log-in"></span>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 nopadding ">
-          <span class="req_call"><a href="#">  Sign In</a></span>
+          <span class="req_call"><a href="/#/login">  Sign In</a></span>
         </div>
 
       </div>
@@ -305,7 +305,7 @@
     <!-- START  Get Software PART -->
     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12  head_btn_main">
       <button type="button" class="btn btn-default get_soft">Get Software</button>
-      <button type="button" class="btn btn-default get_soft">Get Free Account</button>
+      <a type="button" class="btn btn-default get_soft" href="/#/register" >Get Free Account</a>
     </div>
     <!-- END  Get Software PART -->
     <!-- START  Header Title -->
