--- a/src/app/views/templates/navbar.html
+++ b/src/app/views/templates/navbar.html
@@ -45,7 +45,7 @@
         </ul>
       </div>
       <div class="btn-group drop-btn" >
-        <button class="btn btn-mini my-alc-btn"><img class="pro_pic" src="images/pro_pic.png">hiren2hiren</button>
+        <button class="btn btn-mini my-alc-btn"><img class="pro_pic" src="/assets/images/pro_pic.png">hiren2hiren</button>
         <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle" data-toggle="dropdown">
           <span class="caret"></span>
         </button>
