--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -169,8 +169,18 @@ a:focus { color: #0099cc;
 /*****sell_your_equiment******/
 .upload_box{ border: dashed 1px #666; background: #fafafa;
   color: #848e97;
-  padding: 55px 0;
   text-align: center;}
+.upload_box .upload-area{
+  padding: 55px 0;
+}
+
+.upload_box img{
+  width: 100%;
+  height: 100%;
+}
+.upload_box.dragover{
+  border: dashed 2px #ff5600;
+}
 .smplyfy_p{margin: 25px 0 0 0;}
 .make_model{margin: 0 0 0 46%;}
 .sell_lebal{color: #666666; font-size: 18px; font-family: 'Open Sans', sans-serif;}
@@ -222,3 +232,6 @@ a:focus { color: #0099cc;
 .search-head-without{width: 56% !important; height: 40px;}
 .form-group-sell{margin-bottom: 5px;}
 
+.topnav-search .dropdown-menu{
+  padding: 10px;
+}
