--- a/src/app/views/prelogin/login/login.html
+++ b/src/app/views/prelogin/login/login.html
@@ -35,13 +35,13 @@
       <!-- START  LOGIN/REGISTER TAB -->
       <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
         <ul class="nav nav-tabs nav-mytab">
-          <li class="active"><a data-toggle="tab" href="#home">Log in</a></li>
-          <li><a data-toggle="tab" href="#menu1">Register</a></li>
+          <li ng-class="{'active' : !signUpTab}"><a data-toggle="tab" ng-click="signUpTab= false;">Log in</a></li>
+          <li ng-class="{'active' : signUpTab}"><a data-toggle="tab" ng-click="signUpTab= true;">Register</a></li>
         </ul>
 
         <div class="tab-content my-tab">
           <!-- START  LOGIN TAB Content -->
-          <div id="home" class="tab-pane fade in active">
+          <div id="home" class="tab-pane fade in" ng-class="{'active' : !signUpTab}">
 
             <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="#">Need Help?</a></span></div>
 
@@ -66,7 +66,7 @@
           </div>
           <!-- End  LOGIN TAB Content -->
           <!-- START  REGISTER TAB Content -->
-          <div id="menu1" class="tab-pane fade">
+          <div id="menu1" class="tab-pane fade in" ng-class="{'active' : signUpTab}">
             <div class="col-lg-12 welcome_title">Get Started - <span class="link_clr">it’s free</span><span class="flot-right need_help"><a href="#">Need Help?</a></span></div>
 
             <div class="col-lg-12">
