--- a/src/app/views/templates/navbar.html
+++ b/src/app/views/templates/navbar.html
@@ -13,7 +13,9 @@
 
       <form class="navbar-form my-search-nav" role="search">
 
-        <input type="text" class="form-control search-head-without" placeholder="Search for equpiment, parts, etc..." name="q">
+        <input type="text" class="form-control search-head-without" name="q" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedUser"
+               typeahead="user as user.name for user in getUsers($viewValue)"
+               typeahead-template-url="typeahead-item.html">
 
         <button class="btn btn-default my_search" type="submit" style=" "><i class="glyphicon glyphicon-arrow-right"></i></button>
 
